--- a/Proposal/3generalIoT.tex
+++ b/Proposal/3generalIoT.tex
@@ -2,9 +2,9 @@
 \chapter{Recommending Privacy Settings for General/Public IoT}\label{chapter:generalIoT}
 
 \section{Introduction}
-In chapter~\ref{chapter:Relatedwork1} and~\ref{chapter:Relatedwork2}, we have discussed the benefits and risks of IoT technology, the key factors affecting users to adopt IoT systems/devices, the privacy risks caused by inappropriate privacy disclosure. We also discussed that people’s information disclosure behaviours are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}, which enables us to classify users into their respective privacy groups and to adapt the privacy practices to the disclosure style of each group to satisfy different types of information and users. 
+In chapter~\ref{chapter:Relatedwork1} and~\ref{chapter:Relatedwork2}, we have discussed the benefits and risks of IoT technology, and the key factors affecting users to adopt IoT systems/devices, the privacy risks caused by inappropriate privacy disclosure. We also discussed that people's information disclosure behaviors vary along multiple dimensions~\cite{knijnenburg2013dimensionality}, which enables us to classify users into their respective privacy groups and adapt the privacy practices to their disclosure styles. 
 
-The current privacy control schemes make it difficult for IoT users to manually configuring their privacy settings. We developed a data-driven approach to solve this problem: statistical analysis is used to inform the construction of a layered settings interface, while machine learning-based algorithms are used to predict people’s privacy decisions and helps us find most suitable smart privacy profiles. By using this data-driven approach, we design a set of intelligent user interfaces which are able to help user configure their IoT privacy settings by a single click. Note that, the novelty of our work is about the statistical analysis or the machine learning techniques that we used. The real invention is that we are using these techniques (a data-driven approach) to have a direct influence on design of privacy interface settings. Arguably, there is no existing work have done similar work in this area.
+Current privacy control schemes make it difficult for IoT users to manually configure their privacy settings. In this chapter, we developed a data-driven approach to solve this problem: statistical analysis is used to inform the construction of a layered settings interface, while machine learning-based algorithms are used to predict people's privacy decisions and help us find most suitable smart privacy profiles. By using this data-driven approach, we developed a set of ``smart defaults/profiles", which are able to help user configure their IoT privacy settings with a single click. Note that the novelty of our work is not about the statistical analysis and the machine learning techniques that we used; the real invention is that we are using these techniques (a data-driven approach) to have a direct influence on design of privacy interface settings. Arguably, there is no existing similar work in this area.
 
 In this chapter, we intend to answer the following questions:
 \begin{itemize}
@@ -13,13 +13,15 @@ In this chapter, we intend to answer the following questions:
 \end{itemize}
 
 %\section{Definition of General/Public IoT}
-By general/public IoT, we are referring to those IoT devices deployed in public space, such as on the street, near a restaurant, in friends' place, etc. These IoT devices can be used by many entities (i.e. government, employers, friends, colleagues, etc) to collect data with or without people's attention. Those personal data type could be photo, video, or location. These collected data can be used to track people or provide convenience, health-related or social-related information/advice. These data collection can be done continuously or only once. In general, all the IoT devices deployed outside people' home, where they have little control over the data IoT devices collect, can be categorized as general/public IoT. General/public IoT has arguably high uncerntainty and the uncontrollability. It's possible that people are tracked or monitor by cameras without any notification in these public space, leading high the privacy risks and concerns. The demand to get notified about surrounding IoT devices or be able to control these devices is urgent. Researchers at Intel are working on a framework that allows people to be notified about surrounding IoT devices collecting personal information, and to control these collection practices~\cite{chow2015hci}.
+By general/public IoT, we are referring to those IoT devices deployed in public space, outside people' home, where people have little control over. These IoT devices can be operated by many entities (i.e. government, employers, friends, colleagues, etc) to collect data with or without people's awareness. Different types of data, such as photos, videos, or locations, can be collected to track people or provide convenience, health-related or social-related information/advice. Due to the high uncertainty and low Controllability, general/public IoT can cause various privacy risks and concerns. The demand to get notified about surrounding public IoT devices or to be able to control these devices is urgent. Researchers at Intel are working on a framework that allows people to be notified about surrounding IoT devices collecting personal information, and to control these collection practices~\cite{chow2015hci}, but no suitable interface has been developed for this system yet.
 
-Smartphones give users control over their privacy settings in the form of prompts that ask whether the user allows or denies a certain app access to a certain type of information. Such prompts are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our environment continues to increase, prompts would become a constant noise which users will soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. 
+%By general/public IoT, we are referring to those IoT devices deployed in public space, such as on the street, near a restaurant, in friends' house, etc. These IoT devices can be used by many entities (i.e. government, employers, friends, colleagues, etc) to collect data with or without people's attention. Those personal data type could be photo, video, or location. These collected data can be used to track people or provide convenience, health-related or social-related information/advice. These data collection can be done continuously or only once. In general, all the IoT devices deployed outside people' home, where they have little control over the data IoT devices collect, can be categorized as general/public IoT. General/public IoT has arguably high uncerntainty and the uncontrollability. It's possible that people are tracked or monitor by cameras without any notification in these public space, leading high the privacy risks and concerns. The demand to get notified about surrounding IoT devices or be able to control these devices is urgent. Researchers at Intel are working on a framework that allows people to be notified about surrounding IoT devices collecting personal information, and to control these collection practices~\cite{chow2015hci}, but no suitable interface has been developed for this system yet.
 
-Another solution is to regulate privacy with global settings. But research has shown that users are highly concerned about their privacy, but find it difficult to implement privacy settings~\cite{acquisti2006imagined, gross2005inf, madejski2012study}. Indeed, the vast number of encounters people have with a myriad of different IoT devices makes chosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}.
+%Smartphones give users control over their privacy settings in the form of prompts that ask whether the user allows or denies a certain app access to a certain type of information. Such prompts are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our environment continues to increase, prompts would become a constant noise which users will soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. 
 
-Developing a usable privacy-setting interface for IoT to simplify users' task of managing privacy settings seems promising. However, developing such an interface would commonly require user studies with existing systems. Since the Intel control framework~\cite{chow2015hci} has not been implemented yet, this method is also not possible. We therefore propose to develop user interface designs for managing the privacy settings of general/public IoT devices using a \emph{data driven design} approach: rather than evaluating and incrementally improving an existing interface, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which gathered users' feedback on general/public IoT scenarios \emph{before} developing the interface. This approach allows us to create a navigational structure that preemptively maximizes users' efficiency in expressing their privacy preferences. Moreover, it allows us to anticipate the most common privacy settings, and capture them into a series of `privacy profiles' that allow users to express a complex set of privacy preferences with the single click of a button.
+%Another solution is to regulate privacy with global settings. But research has shown that users are highly concerned about their privacy, but find it difficult to implement privacy settings~\cite{acquisti2006imagined, gross2005inf, madejski2012study}. Indeed, the vast number of encounters people have with a myriad of different IoT devices makes chosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}.
+
+Developing a usable privacy-setting interface for IoT to simplify users' task of managing privacy settings seems promising. However, developing such an interface would commonly require user studies with existing systems. Since the Intel control framework~\cite{chow2015hci} has not been implemented yet, this method is not possible. We therefore propose to develop user interface designs for managing the privacy settings of general/public IoT devices using a \emph{data driven design} approach: rather than evaluating and incrementally improving an existing interface, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which gathered users' feedback on general/public IoT scenarios \emph{before} developing the interface. This approach allows us to create a navigational structure that preemptively maximizes users' efficiency in expressing their privacy preferences. Moreover, it allows us to anticipate the most common privacy settings, and capture them into a series of `privacy profiles' that allow users to express a complex set of privacy preferences with the single click of a button.
 
 In this chapter, we first discuss the dataset that we use, then we present how we apply our data-driven approach in the general/public IoT context, including the inspection of users' behaviors using statistical analyses and prediction of users' behaviors using machine learning techniques. Finally, we present the privacy-setting prototypes that we create based on both statistical and machine learning results.
 
@@ -228,7 +230,7 @@ The `reason' for the data collection is the third most important scenario parame
 
 Finally, participants' attitudes significantly (and in some cases fully) mediated the effect of scenario parameters on behavioral intentions. This means that these attitudes may be used as a valuable source for classifying people into distinct groups. Such attitudinal clustering could capture a significant amount of the variation in participants in terms of their preferred privacy settings, especially with respect to the `who' and `what' dimensions.
 
-Moreover, we found no significant interaction effects of parameters on decision. The only significant interaction however was between `Who' and `What' onto the attitudes. The outcome informed the design of a `layered interface', which present privacy settings with the most prominent influence first, relegating less prominent aspects to subsequently lower layers (See Figure~\ref{fig:interface1}). Users can make a decision based on a single parameter only, and choose `yes', `no', or `it depends' for each parameter value. If they choose `it depends', they move to a next layer, where the decision for that parameter value is broken down by another parameter.
+Moreover, we found no significant interaction effects of parameters on decision beyond the significant interaction between `Who' and `What' onto the attitudes. The outcome informed the design of a `layered interface', which present privacy settings with the most prominent influence first, relegating less prominent aspects to subsequently lower layers (See Figure~\ref{fig:interface1}). Users can make a decision based on a single parameter only, and choose `yes', `no', or `it depends' for each parameter value. If they choose `it depends', they move to a next layer, where the decision for that parameter value is broken down by another parameter.
 
 The manual interface is shown in Screens 2-4 of Figure~\ref{fig:interface1}. At the top layer of this interface should be the scenario parameter that is most influential in our dataset. Our statistical results inform us that this is the \textbf{who} parameter. Screen 2 shows how users can allow/reject data collection for each of the 7 types of recipients. Users can choose ``more'', which brings them to the second-most important scenario parameter, i.e. the \textbf{what} parameter. Screen 3 of Figure~\ref{fig:interface1} shows the data type options for when the user clicks on ``more'' for ``Friends' devices''. We have conveniently grouped the options by collection medium. Users can turn the collection of various data types by their friends' devices on or off. If only some types of data are allowed, the toggle at the higher level gets a yellow color and turns to a middle option, indicating that it is not completely `on' (see ``Friends' devices'' in Screen 2).
 
@@ -236,7 +238,7 @@ Screen 4 of Figure~\ref{fig:interface1} shows how users can drill down even furt
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\textwidth]{figures/interface1.pdf}
+	\includegraphics[width=\textwidth]{figures/interface1.pdf}
 	\caption{From Left, Screen 1 shows three default settings, Screen 2,3 and 4 shows layered interface}
 	\label{fig:interface1}
 \end{figure}
@@ -300,7 +302,7 @@ Given that people differ substantially in their privacy preferences, it is not u
 
 \begin{figure}
 	\centering
-	\includegraphics[width=.22\textwidth]{figures/overall.pdf}
+	\includegraphics[width=0.5\textwidth]{figures/overall.pdf}
 	\caption{The Overall Prediction decision tree. Further drill down for `who' = `Own device' is provided in Table~\ref{tab:decisions}}
 	\label{fig:naive_cls}
 \end{figure}
@@ -382,7 +384,8 @@ The 2-cluster solution (Figure~\ref{fig:2clusters}) has a 75.28\% accuracy --- a
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{figures/attitude-based-2.pdf}
-	\caption{Attitude-based clustering: 2-cluster tree. Further drill down for \textbf{who} = `Friend' or `Employer/School' in Cluster 0 is hidden for space reasons.}
+	\caption{Attitude-based clustering: 2-cluster tree. %Further drill down for \textbf{who} = `Friend' or `Employer/School' in Cluster 0 is hidden for space reasons.
+	}
 	\label{fig:2clusters}
 \end{figure}
 
@@ -444,7 +447,7 @@ The 3-cluster solution (Figure~\ref{fig:3clustersFit}) has a 81.54\% accuracy --
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{figures/fit-based-3c.pdf}
+	\includegraphics[angle=90,origin=c]{figures/fit-based-3c.pdf}
 	\caption{Fit-based clustering: 3-cluster tree. Further drill down is hidden for space reasons.}
 	\label{fig:3clustersFit}
 \end{figure*}
@@ -464,17 +467,17 @@ We were able to reach a 5- and 4-cluster solution. The 3-cluster solution collap
 \end{figure}
 
 \subsection{Discussion of Machine Learning Results}
-Figure~\ref{fig:comp_approach} shows a comparison of the presented approaches. Compared to a naive default setting (all `no'), a ``smart default'' makes a 2.0\% improvement. The fit-based 2-cluster solution results in two ``smart profiles'' that make another 6.7\% improvement over the ``smart default'', while the three ``smart profiles'' of the fit-based 3-cluster solution make an 11.5\% improvement. If we let users choose the best option among these three profiles, they will on average be content with 81.54\% of the settings. This rivals the accuracy of some of the ``active tracking'' machine learning approaches~\cite{sadeh2009understanding}.
+Figure~\ref{fig:comp_approach} shows a comparison of the presented approaches. Compared to a naive default setting (all `no'), a ``smart default'' makes a 2.0\% improvement. The fit-based 2-cluster solution results in two ``smart profiles'' that make another 6.7\% improvement over the ``smart default'', while the three ``smart profiles'' of the fit-based 3-cluster solution make an 11.5\% improvement. If we let users choose the best option among these three profiles, they will on average be content with 81.54\% of the settings---a 13.8\% improvement\footnote{81.54.39 / 71.67 = 1.138} over the naive ``no to everything" default. This rivals the accuracy of some of the ``active tracking'' machine learning approaches~\cite{sadeh2009understanding}.
 
 In line with our statistical results, the factor \textbf{who} seems to be the most prominent parameter, followed by \textbf{what}. In some cases the settings are more complex, depending on a combination of \textbf{who} and \textbf{what}. This is in line with the interaction effect observed in our statistical results.
 
 Even our most accurate solution is not without fault, and its accuracy depends most on the \textbf{who} parameter. Specifically, the solution is most accurate for the user's own device, the device of a friend, and when the recipient is unknown. It is however less accurate when the recipient is a colleague, a nearby business, an employer, or the government. In these scenarios, more misclassifications tend to happen, so it would be useful to `guide' users to specifically have a look at these default settings, should they opt to make any manual overrides.
 
-\section{Privacy-setting Prototypes (original work)}\label{sec:design1}
+\section{Privacy shortcuts (original work)}\label{sec:design1}
 In Section~\ref{sec:sa1}, we developed a ``layered" interface that general IoT users can use to manually set their privacy settings (see Figure~\ref{fig:interface1}). Our machine learning analysis (Section~\ref{sec:predict1}) resulted in a number of interesting solutions for ``smart profiles'' that would allow users of this interface to set their privacy settings with a single click (i.e., a choice of profile). In this section we therefore present how we integrate the ``smart profiles" with our prototype. 
 
 \subsection{Smart Default Setting}
-The design of ``layered" interface is based on our statistical results that there exists no interaction effect between the parameters, our ``smart default" settings can be integrated to this prototype in nature. For ``yes to everything'' or ``no to everything'' default, we can just simply set all the settings in the Screen 4 of Figure~\ref{fig:interface1} to all `on' or `off'.
+The design of ``layered" interface is based on our statistical results that there exists no interaction effect between the parameters, our ``smart default" settings can be easily integrated to this prototype. For the ``yes to everything'' or ``no to everything'' default, we can just simply set all the settings in the Screen 4 of Figure~\ref{fig:interface1} to all `on' or `off'.
 
 For the results from our Overall Prediction (see Figure~\ref{fig:naive_cls}), we can create a ``smart default'' setting that is 73.10\% accurate on average. In this version, the IoT settings for all devices are set to `off', except for `My own device', which will be set to the middle option. Table~\ref{tab:decisions} shows the default settings at deeper levels.
 As this default setting is on average only 73.10\% accurate, we expect users to still change some of their settings. They can do this by navigating the manual settings interface.
@@ -482,7 +485,7 @@ As this default setting is on average only 73.10\% accurate, we expect users to 
 \subsection{Smart Profiles}
 To improve the accuracy of the default setting, we can instead build two ``smart profiles'', and allow the user to choose among them. Using the 3-cluster solution of the fit-based approach (see Figure~\ref{fig:3clustersFit}), we can attain an accuracy of 81.54\%. Screen 1 in Figure~\ref{fig:interface1} shows a selection screen where the user can choose between these profiles. The ``Limited collection'' profile allows the collection of any information by the user's own devices, their friends' devices, their employer/school's devices, and devices of nearby businesses. Devices of colleagues are only allowed to collect information for certain reasons. The ``Limited collection, personal devices only'' profile only allows the collection of certain types of information by the user's own devices. The ``No collection'' profile does not allow any data collection to take place by default.
 
-Once the user chooses a profile, they will move to the manual settings interface (Screens 2--4), where they can further change some of their settings.
+Once the user chooses a profile, they will move to the manual settings interface (Screens 2--4 of Figure~\ref{fig:interface1}), where they can further change some of their settings.
 
 \begin{figure}
 	\centering
@@ -502,7 +505,7 @@ Once the user chooses a profile, they will move to the manual settings interface
 	\caption{Two types of profile choice interfaces}
 \end{figure}
 
-\section{Discussion and Limitation}~\label{sec:publiclim}
+\section{Discussion and Limitations}~\label{sec:publiclim}
 Our statistical and machine learning results both indicated that recipient of the information (\textbf{who}) is the most significant parameter in users' decision to allow or reject IoT-based information collection. This parameter therefore features at the forefront in our layered settings interface, and plays an important role in our smart profiles. The \textbf{what} parameter was the second-most important decision parameter, and interacted significantly with the \textbf{who} parameter. This parameter therefore features at the second level of our settings interface, and further qualifies some of the settings in our smart profiles.
 
 Our layered interface allows a further drill-down to the \textbf{reason} and \textbf{persistence} parameters, but given the relatively lesser importance of these parameters, we expect few users to engage with the interface at this level. Moreover, the \textbf{where} parameter was not significant, so we left it out of the interface.
@@ -513,18 +516,18 @@ The fit-based clustering approach, which iteratively clusters users and fits an 
 
 The scenario-based method presented in this paper is particularly suited for novel domains where few real interaction exist. We note, though, that this novelty may hamper our approach: users' decisions are inherently limited by the knowledge they have about IoT. Lee and Kobsa~\cite{lee2016understanding} made sure to educate users about the presented scenarios, hence their data is arguably better in this regard than data from ``live'' systems. However, as the adaptation of IoT becomes more widespread, the mindset and knowledge regarding such technologies---and thus their privacy preferences---might change. Our ``smart profiles'' may thus eventually have to be updated in future work, but for now, our current profiles can at least help users make make better privacy decisions in their initial stages of usage.
 
-One limitation of our work is that we did not test our layered interface, so we do not know whether users are comfortable with the interface or whether they prefer a single ``smart default'' setting or a choice among ``smart profiles'' (i.e.  at what level of complexity in terms of profiles the user would prefer.). This is why I propose a user study in Chapter~\ref{chapter:evaluation} to investigate this problem. Another caveat of our work is that we did not manipulate the pruning parameter of our machine learning models in the privacy decision prediction. Note that, the decision tree shown in Figure~\ref{fig:3clustersFit} is rather complicated, leading to a complicated privacy profile implicated by the decision tree. It will be difficult to explain a privacy profile in nature language to the users when the profile is getting too complicated. We note, though, that pruning the decision tree may reduce the accuracy of our models' results. We would like to explore this interesting trade-off between the accuracy and parsimony (i.e. simpler profile) in our next work when we apply our data-driven approach in the Household IoT context. 
+One limitation of our work is that we did not test our layered interface, so we do not know whether users are comfortable with the interface or whether they prefer a single ``smart default'' setting or a choice among ``smart profiles'' (i.e.  at what level of complexity in terms of profiles the user would prefer.). This is why I propose a user study in Chapter~\ref{chapter:evaluation} to investigate this problem. Another caveat of our work is that we did not manipulate the pruning parameter of our machine learning models in the privacy decision prediction. Note that, the decision tree shown in Figure~\ref{fig:3clustersFit} is rather complicated, leading to a complicated privacy profile implicated by the decision tree. It will be difficult to explain a privacy profile in nature language to the users when the profile is getting too complicated. We note, though, that pruning the decision tree may reduce the accuracy of our models' results. I explore this interesting trade-off between the accuracy and parsimony (i.e. simpler profile) in Chapter~\ref{chapter:householdIoT} where I apply our data-driven approach in the Household IoT context. 
 
 \section{Summary}
 In this chapter, we have presented the following:
 
 \begin{itemize}
-    \item The definition of general/public IoT, and how we come up with the data-driven approach.
-    \item The dataset we use and the process of the data-driven design.
-	\item Using statistical analysis, uncover the relative importance of the parameters that influence users' privacy decisions. Develop a ``layered interface'' in which these parameters are presented in decreasing order of importance.
-	\item Using a tree-learning algorithm, create a decision tree that best predicts participants' choices based on the parameters. Use this tree to create a ``smart default'' setting.
-	\item Using a combination of clustering and tree-learning algorithms, create a set of $N$ decision trees that best predict participants' choices. Use the trees to create $N$ ``smart profiles''.
-	\item Develop a prototype for an IoT privacy-setting interface that integrates the layered interface with the smart default or the smart profiles.
+    \item The definition of general/public IoT, and how we came up with the data-driven approach.
+    \item The dataset we used and the process of the data-driven design.
+	\item Using statistical analysis, uncovered the relative importance of the parameters that influence users' privacy decisions. Developed a ``layered interface'' in which these parameters are presented in decreasing order of importance.
+	\item Using a tree-learning algorithm, created a decision tree that best predicts participants' choices based on the parameters. Used this tree to create a ``smart default'' setting.
+	\item Using a combination of clustering and tree-learning algorithms, created a set of decision trees that best predict participants' choices. Used the trees to create ``smart profiles''.
+	\item Developed a prototype for an IoT privacy-setting interface that integrates the layered interface with the smart default or the smart profiles.
 \end{itemize}
 
 In the next chapter, we discuss the challenges and solutions when we apply our approach in the household IoT context. 
