--- a/Proposal/7conclusion.tex
+++ b/Proposal/7conclusion.tex
@@ -1,3 +1,12 @@
 % !TeX root = proposal.tex
-\chapter{Conclusion}\label{chapter:conclusion}
+\chapter{Expected Contribution}\label{chapter:conclusion}
+The already implemented contribution of my thesis are:
+\begin{itemize}
+	\item Developed a data-driven approach to designing IoT privacy-setting interfaces for three different IoT environments, namely general IoT, household IoT, and fitness IoT.
+	\item Investigated the effect of IoT scenario parameters on IoT users' decisions and attitudes.
+	\item Explored the trade-off between accuracy and parsimony when creating ``smart defaults/profile" for IoT users.
+	\item Created a series of strategies to recommend ``smart profiles" for fitness IoT users.
+\end{itemize}
+
+If my proposed study plan can be executed and my hypothesis about the expected results hold. I would suggest the designers of future IoT privacy-setting interface to make use of our data-driven approach and carefully consider the trade-off between ``smart defaults" and ``smart profiles". Again, if my hypothesis hold and the results show that ``smart profiles" will not decrease the ease of use significantly, then ``smart profiles" is the best route for designing future IoT privacy-setting interface.
 
