--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -1,3 +1,180 @@
+@inproceedings{knijnenburg2013helping,
+	title={Helping users with information disclosure decisions: potential for adaptation},
+	author={Knijnenburg, Bart P and Kobsa, Alfred},
+	booktitle={Proceedings of the 2013 international conference on Intelligent user interfaces},
+	pages={407--416},
+	year={2013},
+	organization={ACM}
+}
+
+@article{kodinariya2013review,
+	title={Review on determining number of Cluster in K-Means Clustering},
+	author={Kodinariya, Trupti M and Makwana, Prashant R},
+	journal={International Journal},
+	volume={1},
+	number={6},
+	pages={90--95},
+	year={2013}
+}
+
+@inproceedings{bahirat2018exploring,
+	title={Exploring Defaults and Framing effects on Privacy Decision Making in Smarthomes},
+	author={Bahirat, Paritosh and He, Yangyang},
+	booktitle={Proceedings of the SOUPS 2018 Workshop on the Human aspects of Smarthome Security and Privacy (WSSP)},
+	year={2018}
+}
+
+@article{lee2019empirical,
+	title={An Empirical Study of Consumer Adoption of Internet of Things Services},
+	author={Lee, Wonjun and Shin, Seungjae},
+	journal={INTERNATIONAL JOURNAL OF ENGINEERING AND TECHNOLOGY INNOVATION},
+	volume={9},
+	number={1},
+	pages={1--11},
+	year={2019},
+	publisher={TAIWAN ASSOC ENGINEERING \& TECHNOLOGY INNOVATION NO 62, LN 375, LINSEN RD~…}
+}
+
+@article{dong2017understanding,
+	title={Understanding usage of Internet of Things (IOT) systems in China: Cognitive experience and affect experience as moderator},
+	author={Dong, Xuebing and Chang, Yaping and Wang, Yawei and Yan, Jun},
+	journal={Information Technology \& People},
+	volume={30},
+	number={1},
+	pages={117--138},
+	year={2017},
+	publisher={Emerald Publishing Limited}
+}
+
+@article{acquisti2005privacy,
+	title={Privacy and rationality in individual decision making},
+	author={Acquisti, Alessandro and Grossklags, Jens},
+	journal={IEEE security \& privacy},
+	volume={3},
+	number={1},
+	pages={26--33},
+	year={2005},
+	publisher={IEEE}
+}
+
+@article{acquisti2007can,
+	title={What can behavioral economics teach us about privacy},
+	author={Acquisti, Alessandro and Grossklags, Jens},
+	journal={Digital privacy: theory, technologies and practices},
+	volume={18},
+	pages={363--377},
+	year={2007},
+	publisher={Auerbach Publications Boca Raton\^{} eFL FL}
+}
+
+@article{iyengar2000choice,
+	title={When choice is demotivating: Can one desire too much of a good thing?},
+	author={Iyengar, Sheena S and Lepper, Mark R},
+	journal={Journal of personality and social psychology},
+	volume={79},
+	number={6},
+	pages={995},
+	year={2000},
+	publisher={American Psychological Association}
+}
+
+@book{schwartz2004paradox,
+	title={The paradox of choice: Why more is less},
+	author={Schwartz, Barry},
+	volume={6},
+	year={2004},
+	publisher={HarperCollins New York}
+}
+
+@inproceedings{tang2012implications,
+	title={The implications of offering more disclosure choices for social location sharing},
+	author={Tang, Karen and Hong, Jason and Siewiorek, Dan},
+	booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+	pages={391--394},
+	year={2012},
+	organization={ACM}
+}
+
+@article{malhotra2004internet,
+	title={Internet users' information privacy concerns (IUIPC): The construct, the scale, and a causal model},
+	author={Malhotra, Naresh K and Kim, Sung S and Agarwal, James},
+	journal={Information systems research},
+	volume={15},
+	number={4},
+	pages={336--355},
+	year={2004},
+	publisher={Informs}
+}
+
+@article{hann2007overcoming,
+	title={Overcoming online information privacy concerns: An information-processing theory approach},
+	author={Hann, Il-Horn and Hui, Kai-Lung and Lee, Sang-Yong Tom and Png, Ivan PL},
+	journal={Journal of Management Information Systems},
+	volume={24},
+	number={2},
+	pages={13--42},
+	year={2007},
+	publisher={Taylor \& Francis}
+}
+
+@article{krasnova2009investigating,
+	title={Investigating the value of privacy on online social networks: conjoint analysis},
+	author={Krasnova, Hanna and Hildebrand, Thomas and Guenther, Oliver},
+	year={2009}
+}
+
+@article{knijnenburg2014increasing,
+	title={Increasing sharing tendency without reducing satisfaction: finding the best privacy-settings user interface for social networks},
+	author={Knijnenburg, Bart Piet and Kobsa, Alfred},
+	year={2014}
+}
+
+@inproceedings{knijnenburg2013persuasive,
+	title={The persuasive effect of privacy recommendations},
+	author={Knijnenburg, Bart P and Jin, Hongxia},
+	booktitle={Twelfth Annual Workshop on HCI Research in MIS},
+	year={2013}
+}
+
+@article{brandimarte2013misplaced,
+	title={Misplaced confidences: Privacy and the control paradox},
+	author={Brandimarte, Laura and Acquisti, Alessandro and Loewenstein, George},
+	journal={Social Psychological and Personality Science},
+	volume={4},
+	number={3},
+	pages={340--347},
+	year={2013},
+	publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{coughlan2012exploring,
+	title={Exploring Acceptance and Consequences of the Internet of Things in the Home},
+	author={Coughlan, Tim and Brown, Michael and Mortier, Richard and Houghton, Robert J and Goulden, Murray and Lawson, Glyn},
+	booktitle={2012 IEEE International Conference on Green Computing and Communications},
+	pages={148--155},
+	year={2012},
+	organization={IEEE}
+}
+
+@article{tuunainen2009users,
+	title={Users' awareness of privacy on online social networking sites-case Facebook},
+	author={Tuunainen, Virpi Kristiina and Pitk{\"a}nen, Olli and Hovi, Marjaana},
+	journal={Bled 2009 Proceedings},
+	pages={42},
+	year={2009}
+}
+
+@article{earp2005examining,
+	title={Examining Internet privacy policies within the context of user privacy values},
+	author={Earp, Julia Brande and Ant{\'o}n, Annie I and Aiman-Smith, Lynda and Stufflebeam, William H},
+	journal={IEEE Transactions on Engineering Management},
+	volume={52},
+	number={2},
+	pages={227--237},
+	year={2005},
+	publisher={IEEE}
+}
+
 @article{li2011smart,
 	title={Smart community: an internet of things application},
 	author={Li, Xu and Lu, Rongxing and Liang, Xiaohui and Shen, Xuemin and Chen, Jiming and Lin, Xiaodong},
@@ -318,6 +495,16 @@
 	publisher={Emerald Group Publishing Limited}
 }
 
+@article{choi2016smartwatch,
+	title={Is the smartwatch an IT product or a fashion product? A study on factors affecting the intention to use smartwatches},
+	author={Choi, Jaewon and Kim, Seongcheol},
+	journal={Computers in Human Behavior},
+	volume={63},
+	pages={777--786},
+	year={2016},
+	publisher={Elsevier}
+}
+
 @article{mital2018adoption,
 	title={Adoption of Internet of Things in India: A test of competing models using a structured equation modeling approach},
 	author={Mital, Monika and Chang, Victor and Choudhary, Praveen and Papa, Armando and Pani, Ashis K},
@@ -521,6 +708,35 @@
 	url = {https://www.pwc.com/us/en/industry/entertainment-media/publications/consumer-intelligence-series/assets/pwc-consumer-intelligence-series-iot-connected-home.pdf},
 	year = {2017},
 	note = "[Online; accessed 1-Jan-2019]"
+}
+
+@article{gindin2009nobody,
+	title={Nobody reads your privacy policy or online contract: Lessons learned and questions raised by the FTC's action against Sears},
+	author={Gindin, Susan E},
+	journal={Nw. J. Tech. \& Intell. Prop.},
+	volume={8},
+	pages={1},
+	year={2009},
+	publisher={HeinOnline}
+}
+
+@misc{forbesIoT,
+	author = {forbes},
+	title = {IoT: Don't Forget Privacy And Security While Racing To The Price Bottom},
+	url = {https://www.forbes.com/sites/forbestechcouncil/2017/09/26/iot-dont-forget-privacy-and-security-while-racing-to-the-price-bottom/#254070897029},
+	year = {2017},
+	note = "[Online; accessed 1-Feb-2019]"
+}
+
+@article{milne2004strategies,
+	title={Strategies for reducing online privacy risks: Why consumers read (or don’t read) online privacy notices},
+	author={Milne, George R and Culnan, Mary J},
+	journal={Journal of interactive marketing},
+	volume={18},
+	number={3},
+	pages={15--29},
+	year={2004},
+	publisher={Elsevier}
 }
 
 @article{eddy2015gartner,
