--- a/Proposal/2related_work.tex
+++ b/Proposal/2related_work.tex
@@ -2,7 +2,7 @@
 \chapter{IoT technology and IoT Acceptance}\label{chapter:Relatedwork1}
 In this chapter, we first discuss how Internet-of-Things enter into people's daily lives, how people benefit from using IoT, what kinds of disadvantages IoT has brought, and the aspects that current IoT research has focused on. We then look at what factors are affecting potential IoT users when they are considering \textit{adopting} this new technology.
 
-When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, the government, or some third-parties with good or bad purpose, which brings privacy risks to the users. Thus, we attempt to obtain a clear understanding of the IoT acceptance model before our further research for the following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have an effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 3) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theoretical model.
+When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience~\cite{hemant2015internet}. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, the government, or some third-parties with good or bad purpose, which brings privacy risks to the users~\cite{medaglia2010overview}. Thus, we attempt to obtain a clear understanding of the IoT acceptance model before our further research for the following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have an effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 3) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theoretical model.
 
 \section{IoT Technology}
 The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through a unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence have advanced rapidly during the last two decades, the definition of IoT has evolved to more broadly covering a wide range of monitoring and control applications based on a network of sensing and actuating devices that are controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
@@ -18,18 +18,18 @@ In this section, we first discuss the original Technology Acceptance Model and t
 
 \subsection{Technology Acceptance Model}
 The Technology Acceptance Model (TAM) is arguably the most popular model that explains how users come to accept and use a technology~\cite{davis1989user}. TAM suggests that an individual's \textit{Behavioral Intention} to Use an information technology is significantly dependent upon the individual's \textit{Perceived Usefulness} and \textit{Perceived Ease Of Use} of that information technology. Specifically, perceived usefulness is the extent to which an individual believes that using a particular information technology will have a positive impact on his/her performance. Perceived ease of use is the extent to which an individual perceives that using a particular information technology will be free of effort. TAM also proposes that perceived ease of use can explain the variance in perceived usefulness.
-TAM have been applied to a wide range of technology adoption contexts~\cite{wixom2005theoretical}, such as the adoption of PC~\cite{venkatesh2001longitudinal}, smartphones~\cite{park2007acceptance}, mobile marketing~\cite{bauer2005driving}, Internet banking~\cite{pikkarainen2004consumer}, facebook~\cite{lee2012effect, rauniar2014technology}, and online shopping~\cite{gefen2003trust}.
+TAM has been applied to a wide range of technology adoption contexts~\cite{wixom2005theoretical}, such as the adoption of PC~\cite{venkatesh2001longitudinal}, smartphones~\cite{park2007acceptance}, mobile marketing~\cite{bauer2005driving}, Internet banking~\cite{pikkarainen2004consumer}, facebook~\cite{lee2012effect, rauniar2014technology}, and online shopping~\cite{gefen2003trust}.
 
 \subsection{UTAUT}
 The unified theory of acceptance and use of technology (UTAUT) is a technology acceptance model proposed by Venkatesh et al.~\cite{venkatesh2003user}. Compared to TAM, UTAUT identifies four key factors: 1) performance expectancy, 2) effort expectancy, 3) social influence, and 4) facilitating conditions, related to predicting behavioral intention to use a technology and actual technology use primarily in organizational contexts. The first three factors are theorized and found to influence behavioral intention to use a technology, while behavioral intention and facilitating conditions determine technology use. UTAUT also identifies four moderators (i.e., age, gender, experience, and voluntariness).
 
-UTAUT has been applied or extended in many contexts, such as electronic learning~\cite{wang2009interactive}, e-government~\cite{weerakkody2013examining}, and cloud computing~\cite{lian2015critical}. UTAUT is developed upon previous models of technology adoption, and designed specifically to investigate users’ acceptance of a new technology and it has explanatory power higher than previous models (e.g. TAM). These make the UTAUT model suitable for understanding the acceptance of IoT.
+UTAUT has been applied or extended in many contexts, such as electronic learning~\cite{wang2009interactive}, e-government~\cite{weerakkody2013examining}, and cloud computing~\cite{lian2015critical}. UTAUT is developed upon previous models of technology adoption, and designed specifically to investigate users’ acceptance of a new technology. Thus, it has explanatory power higher than previous models.
 
 \subsection{The Acceptance of IoT}
-Researchers have attempted to identify the factors that affect the acceptance of IoT by customers. Acquity Group~\cite{acquity2014internet} conducted a user study investigating the concerns of customers to adopt the IoT. Based on more than 2000 US-based customer survey, They find that awareness of the technology, usefulness, price (cost), security, privacy are the main concerns of the customers. In~\cite{gao2014unified}, Gao and Bai present a user study (N=368) to investigate the factors that affect the acceptance of IoT in China. They used the factors of TAM (i.e. perceived ease of use and perceived usefulness) along with other factors such as trust, social influence, perceived enjoyment, and perceived behavioral control. Their results show that perceived usefulness, perceived ease of use, social influence, perceived enjoyment, and perceived behavioral control have significant effect on users' behavioral intention to use the IoT. 
+Researchers have attempted to identify the factors that affect the acceptance of IoT by customers. Acquity Group~\cite{acquity2014internet} conducted a user study investigating the concerns of customers to adopt the IoT. Based on more than 2000 US-based customer survey, They find that awareness of the technology, usefulness, price (cost), security, privacy are the main concerns of the customers. In~\cite{gao2014unified}, Gao and Bai present a user study (N=368) to investigate the factors that affect the acceptance of IoT in China. They used the factors of TAM (i.e. perceived ease of use and perceived usefulness) along with other factors such as trust, social influence, perceived enjoyment, and perceived behavioral control. Their results show that perceived usefulness, perceived ease of use, social influence, perceived enjoyment, and perceived behavioral control have significant effect on users' behavioral intention to use the IoT. In~\cite{lee2019empirical}, Lee and Shin develop and test factors determining user acceptance of IoT services by extending current UTAUT model to include an extra hindering condition to explain the dual attitudes of users such as technical anxiety.
 
 \subsection{A preliminary study (original work)}
-We also conducted a preliminary/pilot study on Clemson University campus (N=15) with the aim to investigate the various factors that affect the adoption of IoT by interviewing with potential IoT users. The interviews were approximately 30-50 minutes in length and covered a wide range of open questions related to IoT (The questionnaire is attached in Appendix). These questions asked participants about their personal preferences regarding to the technology and self-perceived tech savviness. In this study, the conversations with our participants were recorded only after obtaining their consent. This study was approved by IRB. The entire recorded conversation was then transcribed manually. We then extracted keywords from participants' statements during the interview, such as ``privacy'' or ``ease of use''. These keywords were then grouped using card sorting and affinity diagram techniques. We then used a ground approach to creating a theory, which is shown in Figure~\ref{fig:pilotstudymodel}.
+We also conducted a preliminary/pilot study on Clemson University campus (N=15) with the aim to investigate the various factors that affect the adoption of IoT by interviewing with potential IoT users. The interviews were approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions asked participants about their personal preferences regarding to the technology and self-perceived tech savviness. In this study, the conversations with our participants were recorded only after obtaining their consent. This study was approved by IRB. The entire recorded conversation was then transcribed manually. We then extracted keywords from participants' statements during the interview, such as ``privacy'' or ``ease of use''. These keywords were then grouped using card sorting and affinity diagram techniques. We then used a grounded approach to creating a theory, which is shown in Figure~\ref{fig:pilotstudymodel}.
 
 \begin{figure}
 	\centering
@@ -88,15 +88,14 @@ In the next chapter, we discuss the reason that cause the privacy issues in IoT,
 
 
 \chapter{Privacy setting technologies in IoT}\label{chapter:Relatedwork2}
-In chapter~\ref{chapter:Relatedwork1}, we discuss the development of IoT and its acceptance model. As IoT systems are gaining popularity and also bring privacy issues at the same time, it is urgent to study the reason that cause these privacy issues. By doing this, we can improve our design of IoT applications to protect IoT users' privacy, and make IoT more acceptable.
+In chapter~\ref{chapter:Relatedwork1}, we discuss the development of IoT and its acceptance model. As IoT systems gain popularity and bring privacy issues at the same time, it is urgent to study the cause of these privacy issues. By doing this, we can improve our design of IoT applications to protect IoT users' privacy, and make IoT more acceptable.
 
 \section{Privacy Preference}
-Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to belong to 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that users' preferences change for every fitness/heath index. Weight was found the be the most important index~\cite{brar2004privacy}. 
+Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to belong to one of 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that users' preferences change for every fitness/heath index. Weight was found the be the most important index~\cite{brar2004privacy}. 
 
 At the same time, users are found to have difficulties managing their privacy settings with current privacy-setting schemes. Liu et al. use an online survey (N=200) to investigate the difference between the desired privacy settings and the actual privacy settings of Facebook users. Their results show that 63\% of the privacy settings for photo sharing did not match the users' desired settings. In~\cite{madejski2012study}, Madejski et al. conduct user studies to find the difference between Facebook users’ sharing intentions and their actual privacy settings. Their results show that there is at least one violation in the privacy settings for each of the 65 participants.
 
-The reasons for the failure of existing privacy-setting schemes are diverse. One reason for this is that the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people's information disclosure behaviors
-are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}. People can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy groups and adapt their privacy practices to the disclosure style of this group to satisfy different types of information and users. However, on the other hand, the more privacy policies would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, in this thesis, we used a data-driven approach (machine learning techniques) to discover suitable smart privacy profiles for users with different ``disclosure styles".
+The reasons for the failure of existing privacy-setting schemes are diverse. One reason for this is that the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people's information disclosure behaviors vary along multiple dimensions~\cite{knijnenburg2013dimensionality}. People can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy groups and adapt their privacy practices to the disclosure style of this group to satisfy different types of information and users. However, on the other hand, the more privacy policies would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, in this thesis, we will use a data-driven approach (machine learning techniques) to discover suitable smart privacy profiles, which are generated from the results of both statistical analysis and machine learning techniques, for users with different ``disclosure styles".
 
 \section{Privacy in IoT}
 IoT systems are capable of providing a highly personalized services to their users~\cite{vallee2016personalization, etzion2014personalization, hemant2015internet}. Henka et al.~\cite{henka2016personalizing} propose an approach to personalize services in household IoT using the Global Public Inclusive Infrastructure's~\cite{vanderheiden2011creating} preference set to describe an individual's needs and preferences, and then adapting a smart environment accordingly. Russell et al.~\cite{russell2015personalization} use unobtrusive sensors and a micro-controller to realize human detection to provide personalization in a household IoT environment.
@@ -111,17 +110,17 @@ In response, researchers have proposed frameworks with guidelines for evaluating
 
 Other research has considered IoT privacy from the end-user perspective~\cite{feth_user-centered_2017}, both when it comes to research (e.g., Ur et al. investigated how privacy perceptions differ among teens and their parents in smart security systems installed in homes~\cite{ur_intruders_2014}) and design (e.g., Williams et al. highlight the importance of designing interfaces to manage privacy such that they are usable to the end users of IoT devices~\cite{williams2016perfect}, and Feth et al. investigated the creation of understandable and usable controls~\cite{feth_user-centered_2017}). We followed this approach and developed a novel data-driven approach to developing usable and efficient privacy-setting interfaces for several different IoT contexts.
 
-\section{Existing Privacy Control Schemes}
-Previous studies in smartphone privacy have showed that the current smartphone privacy interfaces lack the potential to provide the necessary user privacy information or control for both Android and iOS systems~\cite{lin2014modeling}. Several solutions have been proposed to improve mobile privacy protection and offer users more privacy control~\cite{felt2012android, beresford2011mockdroid}. These leads into rapid improvement of privacy management of current mobile systems, providing more control on the user's privacy settings.
+\section{Existing Privacy Setting Models}
+Previous studies in smartphone privacy have shown that the current smartphone privacy interfaces lack the potential to provide the necessary user privacy information or control for both Android and iOS systems~\cite{lin2014modeling}. Several solutions have been proposed to improve mobile privacy protection and offer users more privacy control~\cite{felt2012android, beresford2011mockdroid}. These lead into rapid improvement of privacy management of current mobile systems, providing more control on the user's privacy settings.
 
-Android system mainly use Ask On Install (AOI) and Ask On First Use (AOFU) models for privacy settings~\cite{tsai2017turtle, wijesekera2017feasibility}. In AOI model, the smart phone permissions are asked in bulk before installing a new app. The user's option is only to allow or deny all, which clearly gives less privacy control. Also, only few number of users would read or pay attention to the privacy settings when installing the app, and even fewer users can understand their meaning~\cite{felt2012android,kelley2012conundrum}. Several third-party apps have been developed to cope with this problem, such as Turtleguard~\cite{tsai2017turtle} and Mockdroid~\cite{beresford2011mockdroid}. %, Advanced Permission Manager\cite{},Xprivacy\cite{}, Permission Master~\cite{}, DonkeyGuard\cite{}, AppOps\cite{}. 
-In the AOFU model~\cite{tsai2017turtle}, permissions are only asked during the first use of an app or a some function of the app is demanding a specific permission of the smartphone. In this case, the user will trade off his privacy (data sharing) and the functionality of the app. Users can also revisit and review permissions in their phone privacy settings for each app. This model makes user more informed and gives them more control as the previous model does not allow users to be informed effectively~\cite{fu2014field}. Moreover, it has been proven that interactive notification is more efficient in informing users request access~\cite{fu2014field}.
+Android system mainly use Ask On Install (AOI) and Ask On First Use (AOFU) models for privacy settings~\cite{tsai2017turtle, wijesekera2017feasibility}. In the AOI model, the smartphone permissions are asked in bulk before installing a new app. The user's option is only to allow or deny all, which clearly gives less privacy control. Also, only few users would read or pay attention to the privacy settings when installing the app, and even fewer users can understand their meaning~\cite{felt2012android,kelley2012conundrum}. Several third-party apps have been developed to cope with this problem, such as Turtleguard~\cite{tsai2017turtle} and Mockdroid~\cite{beresford2011mockdroid}. %, Advanced Permission Manager\cite{},Xprivacy\cite{}, Permission Master~\cite{}, DonkeyGuard\cite{}, AppOps\cite{}. 
+In the AOFU model~\cite{tsai2017turtle}, permissions are only asked during the first use of an app or when some function of the app is demanding a specific permission of the smartphone. In this case, the user will trade off his privacy (data sharing) and the functionality of the app. Users can also revisit and review permissions in their phone privacy settings for each app. This model makes users more informed and gives them more control compared to AOI~\cite{fu2014field}.
 
-A few privacy management were developed to simplify the task of controlling personal data for smartphone users. For instance, ipShield~\cite{chakraborty2014ipshield} is a context-aware privacy framework for mobile systems that provides users with great control of their data and inference risks. My Data Store \cite{ref:vescovi} offers a set of tools to manage, control and exploit personal data by enhancing an individual’s awareness on the value of their data. Similarly, Databox~\cite{ref:chaudhry} enables individuals to coordinate the collection of their personal data, and make those data available for specific purposes. However, these data managers do not include user privacy profiling and recommendation in the complex IoT environment. Privacy can also be protected by providing different anonymity levels of data that are given to the third parties. However, it might not be possible to implement the most effective privacy standards such as data obfuscation due to numerous trade-offs and restrictions, especially in the health care and fitness domain.
+A few privacy management solutions were developed to simplify the task of controlling personal data for smartphone users. For instance, ipShield~\cite{chakraborty2014ipshield} is a context-aware privacy framework for mobile systems that provides users with great control of their data and inference risks. My Data Store \cite{ref:vescovi} offers a set of tools to manage, control and exploit personal data by enhancing an individual’s awareness of the value of their data. Similarly, Databox~\cite{ref:chaudhry} enables individuals to coordinate the collection of their personal data, and make those data available for specific purposes. However, these data managers do not include user privacy profiling and recommendation in the complex IoT environment. Privacy can also be protected by providing different anonymity levels of data that are given to third parties. However, it might not be possible to implement the most effective privacy standards such as data obfuscation due to numerous trade-offs and restrictions, especially in the health care and fitness domain.
 
-In smartphone domain, privacy nudging is an effective scheme to increase users' awareness~\cite{almuhimedi2015your}. Privacy nudging allows users to be informed and aware on both their privacy settings and how the third party applications access their data~\cite{liu2016follow,fu2014field}. It has been showed that 78.7\%~\cite{liu2016follow} of the privacy recommendation were adopted by the smartphone users. However, such nudging are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our homes continues to increase, nudging would become a constant noise which users will soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. In addition, Privacy nudges lack the personalization and provide general recommendation.
+In the smartphone domain, privacy nudging is an effective scheme to increase users' awareness~\cite{almuhimedi2015your}. Privacy nudging allows users to be informed about both their privacy settings and how third party applications access their data~\cite{liu2016follow,fu2014field}. In a study by Liu et al., 78.7\%~\cite{liu2016follow} of the nudges were adopted by smartphone users. However, such nudges are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our homes continues to increase, nudging would become a constant noise which users would soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. In addition, privacy nudges lack the personalization and provide only a general recommendation.
 
-Another approach which is more user-centric is the user-tailored privacy~\cite{knijnenburg2017privacy}. It models users’ privacy concerns and provides them with adaptive privacy decision support. This model can be seen as personalized ``smart nudges'' where the recommendation is aligned with the user's privacy preference. User-tailored privacy aids users in making privacy decisions by providing them the right amount of both the privacy-related information associated to them and the useful privacy control that do not overwhelm or mislead them. However, in practice it is hard to implement general privacy model as the idea is too broad and abstract especially in the diversity of privacy perception of users. 
+%Another approach which is more user-centric is the user-tailored privacy~\cite{knijnenburg2017privacy}. It models users’ privacy concerns and provides them with adaptive privacy decision support. This model can be seen as personalized ``smart nudges'' where the recommendation is aligned with the user's privacy preference. User-tailored privacy aids users in making privacy decisions by providing them the right amount of both the privacy-related information associated to them and the useful privacy control that do not overwhelm or mislead them. However, in practice it is hard to implement general privacy model as the idea is too broad and abstract especially in the diversity of privacy perception of users. 
 
 %\textit{khealth} is an IoT framework based on a personalized digital health care information system that protects users from third parties' advertisements~\cite{sharma2018toward}. Pejovic and Musolesi~\cite{Pejovic2014} presented the design and implementation of an efficient online learner that can serve as a basis for recognizing opportune moments for interruption. The design of the library is based on an in-depth study of human interruptibility. Comparatively, our work tries to find the most suitable privacy-setting profile for each user based on their privacy preference on different household IoT scenarios.
 
@@ -133,7 +132,7 @@ Privacy wedges have been tested on limited numbers of friends, and in the case o
 We used a data-driven approach to solve this problem: statistical analysis informs the construction of a layered settings interface, while machine learning-based privacy prediction helps us find smart privacy profiles.
 
 \section{Privacy Prediction}
-Several researchers have proposed privacy prediction as a solution to the privacy settings complexity problem---an approach known as ``user-tailored privacy'' (UTP)~\cite{knijnenburg2017}. Systems that implement UTP first predict users' privacy preferences and behaviors based on their known characteristics. They then use these predictions to provide automatic default settings or suggestions in line with users' disclosure profiles, to educate users' about privacy features they are unaware of, to tailor the privacy-setting user interfaces to make it easier for users to engage with their preferred privacy management tools, or to selectively restrict the types of personalization a system is allowed engage in.
+Several researchers have proposed privacy prediction as a solution to the privacy settings complexity problem---an approach known as ``user-tailored privacy'' (UTP)~\cite{knijnenburg2017}. Systems that implement UTP first predict users' privacy preferences and behaviors based on their known characteristics. They then use these predictions to provide automatic default settings or suggestions in line with users' disclosure profiles, to educate users about privacy features they are unaware of, to tailor the privacy-setting user interfaces to make it easier for users to engage with their preferred privacy management tools, or to selectively restrict the types of personalization a system is allowed engage in.
 
 Most existing work in line with this approach has focused on providing automatic default settings. For example, Sadeh et al.~\cite{sadeh2009understanding} used a k-nearest neighbor algorithm and a random forest algorithm to predict users' privacy preferences in a location-sharing system, based on the type of recipient and the time and location of the request. They demonstrated that users had difficulties setting their privacy preferences, and that the applied machine learning techniques can help users to choose more accurate disclosure preferences. Similarly, Pallapa et al.~\cite{pallapa2014adaptive} present a system which can determine the required privacy level in new situations based on the history of interaction between users. Their system can efficiently deal with the rise of privacy concerns and help users in a pervasive system full of dynamic interactions.
 
@@ -148,4 +147,4 @@ In this proposal, we extend this \emph{clustering} approach to find the best pro
 \section{Summary}
 In this chapter, we have noted following points: 1) Existing research has shown that people are extensively different in their privacy settings, but can be grouped. 2) People are bad at managing privacy settings using currently privacy setting schemes. 3) Privacy prediction can be used by utilizing machine learning algorithms to help design a new privacy-setting interface to simplify the task of managing privacy setting for users. 
 
-In the next chapter, we will examine our methodology in the general/public IoT context, present our contributions as well the limitations of our work.
+In the next chapter, we will present how we design for privacy in the general/public IoT context using a data-driven approach, the contributions and the limitations of our work.
